paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_names/sample_003/target.compile.log
error[E0106]: missing lifetime specifier
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_names/sample_003/target.rs:57:25
   |
57 |         let pf: fn() -> &i32 = fip;
   |                         ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
57 |         let pf: fn() -> &'static i32 = fip;
   |                          +++++++
help: instead, you are more likely to want to return an owned value
   |
57 -         let pf: fn() -> &i32 = fip;
57 +         let pf: fn() -> i32 = fip;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.